Implemented basic connector for OpenAI api.

--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WebApp</title>
+  <title>Aethio</title>
 
   <!-- Style Sheets -->
   <link rel="stylesheet" href="./css/cryptobot.css">
